--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "axios": "^0.21.1",
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
     "react": "^17.0.1",
@@ -26,7 +27,8 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "typescript": "~3.8.2"
+    "typescript": "~3.8.2",
+    "url-pattern": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
